--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>test project</title>
 </head>
 <body>
+    <h1>MY LIFE CYCLE</h1>
+    <P>I was born at USA </P>
+    <h2>I suffering from European to USA</h2>
     
 </body>
 </html>
